[#18] java 13 optionen gesetzt Signed-off-by: FunThomas424242 (Thomas Schubert) <funthomas424242@gmail.com>
Signed-off-by: FunThomas424242 (Thomas Schubert) <funthomas424242@gmail.com>