@@ -201,6 +201,26 @@
     </pluginManagement>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-toolchains-plugin</artifactId>
+        <version>3.0.0</version>
+        <configuration>
+          <toolchains>
+            <jdk>
+              <version>13</version>
+              <vendor>openjdk</vendor>
+            </jdk>
+          </toolchains>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>toolchain</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>license-maven-plugin</artifactId>
         <configuration>
@@ -321,8 +341,12 @@
         <configuration>
           <encoding>UTF-8</encoding>
           <release>11</release>
-          <compilerArgument>-Xlint:all</compilerArgument>
-          <fork>false</fork>
+          <compilerArgs>
+            <arg>-Xlint:all</arg>
+<!--            <arg>&#45;&#45;add-modules=java.xml.bind</arg>-->
+            <arg>--add-opens=java.base/java.lang/java.net=ALL-UNNAMED</arg>
+          </compilerArgs>
+          <fork>true</fork>
         </configuration>
       </plugin>
       <plugin>
@@ -330,7 +354,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M2</version>
         <configuration>
-          <forkMode>never</forkMode>
+<!--          <forkMode>never</forkMode>-->
           <argLine>
             --illegal-access=deny
           </argLine>
@@ -368,16 +392,16 @@
           </archive>
         </configuration>
       </plugin>
-	  <plugin>
-	    <artifactId>maven-jlink-plugin</artifactId>
-	    <version>3.0.0-alpha-1</version>
-	    <extensions>true</extensions>
-	    <configuration>
-	      <verbose>false</verbose>
-	      <noHeaderFiles>true</noHeaderFiles>
-	      <noManPages>true</noManPages>
-	    </configuration>
-	  </plugin>
+<!--      <plugin>-->
+<!--        <artifactId>maven-jlink-plugin</artifactId>-->
+<!--        <version>3.0.0-alpha-1</version>-->
+<!--        <extensions>true</extensions>-->
+<!--        <configuration>-->
+<!--          <verbose>false</verbose>-->
+<!--          <noHeaderFiles>true</noHeaderFiles>-->
+<!--          <noManPages>true</noManPages>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
@@ -468,39 +492,39 @@
         <junit-excluded-groups>headfull</junit-excluded-groups>
       </properties>
     </profile>
-    <profile>
-      <id>jmod</id>
-      <properties>
-        <mypackaging>jar</mypackaging>
-        <maven.test.skip>true</maven.test.skip>
-      </properties>
-      <build>
-        <defaultGoal>package</defaultGoal>
-        <plugins>
-          <plugin>
-            <artifactId>maven-jmod-plugin</artifactId>
-            <version>3.0.0-alpha-1</version>
-            <extensions>true</extensions>
-            <executions>
-              <execution>
-                <id>jmod</id>
-                <goals>
-                  <goal>create</goal>
-                </goals>
-                <phase>package</phase>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>jlink</id>
-      <properties>
-        <mypackaging>jlink</mypackaging>
-        <maven.test.skip>false</maven.test.skip>
-      </properties>
-    </profile>
+<!--    <profile>-->
+<!--      <id>jmod</id>-->
+<!--      <properties>-->
+<!--        <mypackaging>jar</mypackaging>-->
+<!--        <maven.test.skip>true</maven.test.skip>-->
+<!--      </properties>-->
+<!--      <build>-->
+<!--        <defaultGoal>package</defaultGoal>-->
+<!--        <plugins>-->
+<!--          <plugin>-->
+<!--            <artifactId>maven-jmod-plugin</artifactId>-->
+<!--            <version>3.0.0-alpha-1</version>-->
+<!--            <extensions>true</extensions>-->
+<!--            <executions>-->
+<!--              <execution>-->
+<!--                <id>jmod</id>-->
+<!--                <goals>-->
+<!--                  <goal>create</goal>-->
+<!--                </goals>-->
+<!--                <phase>package</phase>-->
+<!--              </execution>-->
+<!--            </executions>-->
+<!--          </plugin>-->
+<!--        </plugins>-->
+<!--      </build>-->
+<!--    </profile>-->
+<!--    <profile>-->
+<!--      <id>jlink</id>-->
+<!--      <properties>-->
+<!--        <mypackaging>jlink</mypackaging>-->
+<!--        <maven.test.skip>false</maven.test.skip>-->
+<!--      </properties>-->
+<!--    </profile>-->
 
   </profiles>
 
